--- a/style.css
+++ b/style.css
@@ -1,35 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Dasmoto's Arts and Craft</title>
-        <link href="./style.css" rel='stylesheet'>
-    </head>
+* {
+    font-family: Helvetica;
+}
 
+h1 {
+    font-size: 100px;
+    font-weight: bold;
+    color: khaki;
+    text-align: center;
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg")
+}
 
-    <body>
-        <header>
-            <h1>Dasmoto's Arts & Crafts</h1>
-        </header>
+.item h2 {
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+}
 
-        <article class="item">
-            <h2 class='brushes'>Brushes</h2>
-            <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
-            <h3>Hacksaw Brushes</h3>
-            <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class='price'>Starting at $3.00 / brush.</span></p>
-        </article>
-            
-        <article class="item">
-            <h2 class='frames'>Frames</h2>
-            <image src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg" alt=""/>
-            <h3>Art Frames (assorted)</h3>
-            <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class='price'>Starting at $2.00 / frame.</span></p>
-        </article>
+.brushes {
+    background-color: mediumspringgreen;
+}
 
-        <article class="item">
-            <h2 class='paint'>Paint</h2>
-            <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg" alt=""/>
-            <h3>Clean Finnish Paint</h3>
-            <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class='price'>Starting at $5.00 / tube.</span></p>
-        </article>
-    </body>
-</html>
+.frames {
+    background-color: lightcoral;
+}
+
+.paint {
+    background-color: skyblue;
+}
+
+.price {
+    font-weight: bold;
+    color: blue;
+}
